# OOP2022

./: CMakeLists.txt
EN/ex1/: question.c  task1.c  task2.c  task2text.md  task3.c
EN/ex11/: task1.cpp  task2.cpp  task3.cpp
EN/ex12/: task1.cpp  task2.cpp
EN/ex2/: intro_to_cpp.cpp  ski.c  students.cpp
EN/ex4/: task1.cpp  task2.cpp  task3.cpp
EN/ex5/: task1.cpp  task2.cpp  task3.cpp
EN/ex6/: task1.cpp  task2.c
EN/ex7/: README.md  task1.cpp  task2.cpp  task3.cpp
EN/ex9/: task1.cpp  task2.cpp  task3.cpp  task4.cpp
MK/av1/: zad1.c  zad2.c  zad3.c
MK/av10/: grading.c  konsultacii.cpp  zad1.cpp  zad2.cpp  zad3.cpp  zad3.md
MK/av11/: zad1.cpp  zad2.cpp  zad3.cpp
MK/av12/: zad1.cpp  zad2.cpp
MK/av2/: intro_to_cpp.cpp  intro_to_references.cpp  kolokviumska.c  persons.cpp  skilift.c  students.cpp
MK/av4/: zad1.cpp  zad2.cpp  zad3.cpp
MK/av5/: zad1.cpp  zad2.cpp  zad3.cpp
MK/av6/: zad1.cpp  zad2.cpp
MK/av7/: README.md  zad1.cpp  zad2.cpp
MK/av8/: zad1.cpp  zad2.cpp  zad3.cpp
MK/av9/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp
