cmake_minimum_required(VERSION 3.17)
project(OOP2022)

set(CMAKE_CXX_STANDARD 14)

add_executable(OOP2022 main.cpp)
add_executable(zad1 MK/av1/zad1.c)
add_executable(zad2 MK/av1/zad2.c)
add_executable(zad3 MK/av1/zad3.c)
add_executable(task1 EN/ex1/task1.c)
add_executable(task2 EN/ex1/task2.c)
add_executable(task3 EN/ex1/task3.c)
add_executable(intro_to_cpp MK/av2/intro_to_cpp.cpp)
add_executable(persons MK/av2/persons.cpp)
add_executable(intro_to_references MK/av2/intro_to_references.cpp)
add_executable(students MK/av2/students.cpp)
add_executable(kolokviumska MK/av2/kolokviumska.c)
add_executable(skilift MK/av2/skilift.c)