cmake_minimum_required(VERSION 3.17)
project(OOP2022)

set(CMAKE_CXX_STANDARD 14)

add_executable(OOP2022 main.cpp)
add_executable(zad1 MK/av5/zad1.cpp)
add_executable(zad2 MK/av5/zad2.cpp)
add_executable(zad3 MK/av5/zad3.cpp)
add_executable(task1 EN/ex5/task1.cpp)
add_executable(task2 EN/ex5/task2.cpp)
add_executable(task3 EN/ex4/task3.cpp)
add_executable(intro_to_cpp EN/ex2/intro_to_cpp.cpp)
add_executable(persons MK/av2/persons.cpp)
add_executable(intro_to_references MK/av2/intro_to_references.cpp)
add_executable(students EN/ex2/students.cpp)
add_executable(kolokviumska MK/av2/kolokviumska.c)
add_executable(skilift MK/av2/skilift.c)
add_executable(question EN/ex1/question.c)

add_executable(ski EN/ex2/ski.c)